test/users/nikkiradFT/test4.good
test4.chpl:17: syntax error: near @unstable 